--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,9 +12,12 @@
     <FrameLayout
         android:id="@+id/frame"
         android:layout_below="@id/tool_bar"
+        android:layout_above="@id/navbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </FrameLayout>
+
+    <include layout="@layout/navbar" android:id="@+id/navbar" />
 
 </RelativeLayout>
