--- a/app/src/main/res/layout/adapter_post.xml
+++ b/app/src/main/res/layout/adapter_post.xml
@@ -1,35 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     app:cardUseCompatPadding="true"
-    android:layout_width="300dp"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center">
+    android:layout_width="340dp"
+    android:layout_height="405dp"
+    android:layout_gravity="center"
+    app:cardCornerRadius="9dp"
+    app:cardElevation="2dp"
+    app:cardMaxElevation="4dp">
 
    <RelativeLayout
+       android:id="@+id/postLayout"
        android:layout_width="match_parent"
-       android:layout_height="wrap_content">
+       android:layout_height="wrap_content"
+       android:padding="15dp"
+       android:background="@color/colorBlack">
 
-       <ImageView
-           android:id="@+id/postImage"
-           android:layout_width="200dp"
-           android:layout_height="250dp"
+       <ImageButton
+           android:id="@+id/postWorld"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_alignParentLeft="true"
+           android:layout_alignParentTop="true"
+           android:background="@drawable/world_icon"
            />
 
        <TextView
            android:id="@+id/postTitle"
-           android:layout_width="wrap_content"
+           android:layout_width="190dp"
            android:layout_height="wrap_content"
-           android:layout_toRightOf="@id/postImage"
+           android:layout_alignParentLeft="true"
+           android:layout_alignParentBottom="true"
+           android:layout_marginBottom="70dp"
+           android:theme="@style/EditTextStyle"
+           android:textColor="@android:color/white"
            android:text="Niagara Fall" />
 
-       <Button
-           android:id="@+id/postOpen"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/postImage"
-           android:text="See more"/>
+       <!--<Button-->
+           <!--android:id="@+id/postOpen"-->
+           <!--android:layout_width="wrap_content"-->
+           <!--android:layout_height="wrap_content"-->
+           <!--android:layout_below="@id/postImage"-->
+           <!--android:text="See more"/>-->
 
    </RelativeLayout>
 
