--- a/app/src/main/res/layout/fragment_all_posts.xml
+++ b/app/src/main/res/layout/fragment_all_posts.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="#F7F7F9">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPagerPost"
@@ -11,10 +12,10 @@
         android:clipToPadding="false"
         android:overScrollMode="never"
         android:paddingBottom="30dp"
-        android:paddingEnd="60dp"
-        android:paddingLeft="60dp"
-        android:paddingRight="60dp"
-        android:paddingStart="60dp" />
+        android:paddingEnd="50dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:paddingStart="50dp" />
 
 
 </RelativeLayout>
