--- a/app/src/main/res/layout/post_detail_fragment.xml
+++ b/app/src/main/res/layout/post_detail_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,69 +15,146 @@
 
             <ImageView
                 android:id="@+id/postImage"
-                android:layout_width="300dp"
-                android:layout_height="600dp"
-                />
+                android:layout_width="match_parent"
+                android:layout_height="270dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:scaleType="center"/>
 
-            <TextView
-                android:id="@+id/postTitle"
+            <RelativeLayout
+                android:id="@+id/container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#0A1E33"
                 android:layout_below="@id/postImage"
-                />
+                android:padding="30dp">
 
-            <TextView
-                android:id="@+id/postDescription"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/postTitle"
-                />
+                <TextView
+                    android:id="@+id/postTitle"
+                    android:layout_width="190dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:theme="@style/EditTextStyle"
+                    android:textColor="@android:color/white"
+                    android:text="Niagara Fall" />
 
-            <TextView
-                android:id="@+id/postAddress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/postDescription"
-                />
+                <ImageButton
+                    android:id="@+id/postContributeButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/btn_upvote_red"
+                    />
+
+                <ImageButton
+                    android:id="@+id/postGoToAddressMap"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/postTitle"
+                    android:layout_marginTop="10dp"
+                    android:layout_alignParentLeft="true"
+                    android:background="@drawable/world_icon"
+                    />
+
+                <RelativeLayout
+                    android:id="@+id/container2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_post"
+                    android:layout_below="@id/postGoToAddressMap"
+                    android:padding="10dp"
+                    android:layout_marginTop="30dp">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/postUserImage"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_alignParentLeft="true" />
+
+                    <TextView
+                        android:id="@+id/postUserUsername"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/postUserImage"
+                        android:layout_alignBaseline="@id/postUserImage"
+                        style="@style/TitleTextView"
+                        android:textSize="19sp"
+                        android:text="malikas"
+                        android:textColor="@color/colorBlack"
+                        android:layout_marginLeft="20dp"/>
+
+                    <TextView
+                        android:id="@+id/postDescription"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/postUserImage"
+                        android:layout_marginTop="20dp"
+                        style="@style/EditTextStyle"
+                        android:textSize="17sp"
+                        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+                        />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/recyclerContributors"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_post"
+                    android:layout_below="@id/container2"
+                    android:padding="10dp"
+                    android:layout_marginTop="30dp">
+
+                    <TextView
+                        android:id="@+id/voters"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:theme="@style/TitleTextView"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="18sp"
+                        android:text="Voters" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/postAllContributers"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginTop="30dp"
+                        android:layout_below="@id/voters"
+                    />
 
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/postAllContributers"
-                android:layout_width="match_parent"
-                android:layout_height="400dp"
-                android:layout_below="@id/postAddress"
-                />
+                </RelativeLayout>
 
-            <Button
-                android:id="@+id/postContributeButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/postAddress"
-                />
-
-            <Button
-                android:id="@+id/postGoToAddressMap"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/postContributeButton" />
+            </RelativeLayout>
 
 
 
-            <ImageView
-                android:id="@+id/postUserImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/postGoToAddressMap"/>
+            <!--<android.support.v7.widget.RecyclerView-->
+                <!--android:id="@+id/postAllContributers"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="400dp"-->
+                <!--android:layout_below="@id/postAddress"-->
+                <!--/>-->
 
-            <TextView
-                android:id="@+id/postUserUsername"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/postUserImage"/>
+
+
+            <!--<ImageView-->
+                <!--android:id="@+id/postUserImage"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/postGoToAddressMap"/>-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/postUserUsername"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/postUserImage"/>-->
 
 
         </RelativeLayout>
 
     </ScrollView>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
