--- a/app/src/main/res/layout/profile_post_view_holder.xml
+++ b/app/src/main/res/layout/profile_post_view_holder.xml
@@ -1,24 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="150dp"
+    android:layout_height="200dp"
+    android:background="@drawable/bg_profile_post"
+    android:elevation="4dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="20dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
 
     <RelativeLayout
         android:id="@+id/postWrap"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/postImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="150dp" />
 
         <TextView
             android:id="@+id/postTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/postImage"/>
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_below="@+id/postImage"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:text="asdasdasdasdadwqeqweqeqasdadadadadadadewqe"
+            style="@style/EditTextStyle"
+            />
 
     </RelativeLayout>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
